--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; <a href="https://hygir.com">hygir.com</a> 2014</p>
+                    <p>Copyright &copy; <a href="http://hygir.com">hygir.com</a> 2014</p>
                 </div>
             </div>
             <!-- /.row -->
